--- a/frontend/html/homepage.html
+++ b/frontend/html/homepage.html
@@ -56,23 +56,23 @@
                     <h2 class="map-title">Играта е</h2>
                     <h2 class="map-title">най-добрият</h2>
                     <h2 class="map-title-last">метод за учене!</h2>
-                    <p class="main-text">Детските площадки са места, </p>
-                    <p class="main-text">където децата развиват важни</p>
-                    <p class="main-text">физически и социални умения, </p>
-                    <p class="main-text">необходими за придобиване на </p>
-                    <p class="main-text">самочувствие, координация и </p>
-                    <p class="main-text">развитие на критично мислене.</p>
+                    <p class="map-page-main-text">Детските площадки са места, </p>
+                    <p class="map-page-main-text">където децата развиват важни</p>
+                    <p class="map-page-main-text">физически и социални умения, </p>
+                    <p class="map-page-main-text">необходими за придобиване на </p>
+                    <p class="map-page-main-text">самочувствие, координация и </p>
+                    <p class="map-page-main-text">развитие на критично мислене.</p>
                 
                     <div class="number-of-playgrounds">
                         <div>
-                            <h1 id="numberOfPlaygrounds">3 928</h1>
-                            <span>детски площадки</span>
+                            <div id="numberOfPlaygrounds">3 928</div>
+                            <div class="number-of-playgrounds-text">детски площадки</div>
                         </div>
                     </div>
                 </div>
                 <div class="map-view">
                     <img src="../../resources/map_temp.jpeg" alt="map">
-                    <button onclick="openPlaygroundForm()"> <i class="fa-regular fa-square-plus"></i> ДОБАВЕТЕ ДЕТСКА ПЛОЩАДКА</button>
+                    <button onclick="openPlaygroundForm()" class="add-playground-btn"> <i class="fa-regular fa-square-plus"></i> ДОБАВЕТЕ ДЕТСКА ПЛОЩАДКА</button>
                 </div>
             </div>
 
