--- a/frontend/html/homepage.html
+++ b/frontend/html/homepage.html
@@ -8,6 +8,7 @@
     <title>Начална страница</title>
     <script src="https://kit.fontawesome.com/4d3f93d2d2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/homepage.css">
+    <link rel="stylesheet" href="../css/map.css">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 </head>
 
