--- a/frontend/html/homepage.html
+++ b/frontend/html/homepage.html
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <div class="map-view">
-                    <button onclick="showCurrentLocation()">Покажи моята локация</button>
+                    <button onclick="showCurrentLocation()" class="add-playground-btn">Покажи моята локация</button>
                     <div id="map"></div>
                     <button onclick="openPlaygroundForm()" class="add-playground-btn"> <i class="fa-regular fa-square-plus"></i> ДОБАВЕТЕ ДЕТСКА ПЛОЩАДКА</button>
                 </div>
