--- a/frontend/html/playgroundForm.html
+++ b/frontend/html/playgroundForm.html
@@ -13,6 +13,26 @@
 </head>
 
 <body>
+    <header>
+        <div class="home-wrapper">                
+            <div> Начало </div>
+        </div>
+        <div class="map-wrapper">
+            <div> Карта </div>
+        </div>
+        <div class="about-us-wrapper">
+            <div> За прокета</div>
+        </div>
+        <div class="logout-wrapper">
+            <div>
+                <!-- when it says "Вход" -> <i class="fa-solid fa-user"></i> ? -->
+                <!-- <i class="fa-solid fa-arrow-right-from-bracket"></i> Изход -->
+                <!-- <button id="logout-btn" onclick="logout()">Вход</button> -->
+                Вход
+            </div>
+        </div>
+        <img class="site-logo" src="../../resources/logo  site.png" alt="site logo">
+    </header>
     <div id="add-playground">
         <h2>Добави площадка</h2>
         <div>
@@ -20,6 +40,7 @@
                 
                 <div class="question">
                     <label class="form-label" for="name-question">1. Име:</label>
+                    <br>
                     <input id="playground-name" type="text" class="project-input project-input-text" placeholder="Име на площадката, ако има такова." name="name">
                 </div>
 
