Moved map text beneath map

--- a/frontend/html/homepage.html
+++ b/frontend/html/homepage.html
@@ -60,16 +60,15 @@
                     <button onclick="showCurrentLocation()" class="add-playground-btn">Покажи моята локация</button>
                 </div>
                 <div class="map-page-text">
-                    <h2 class="map-title">Играта е</h2>
-                    <h2 class="map-title">най-добрият</h2>
-                    <h2 class="map-title-last">метод за учене!</h2>
-                    <p class="map-page-main-text">Детските площадки са места, </p>
-                    <p class="map-page-main-text">където децата развиват важни</p>
-                    <p class="map-page-main-text">физически и социални умения, </p>
-                    <p class="map-page-main-text">необходими за придобиване на </p>
-                    <p class="map-page-main-text">самочувствие, координация и </p>
-                    <p class="map-page-main-text">развитие на критично мислене.</p>
-                
+                    <div id="map-text">
+                        <h2 class="map-title">Играта е <br> най-добрият <br> метод за учене!</h2>
+                        <p class="map-page-main-text">Детските площадки са места, <br>
+                                                    където децата развиват важни<br>
+                                                    физически и социални умения, <br> 
+                                                    необходими за придобиване на <br>
+                                                    самочувствие, координация и <br>
+                                                    развитие на критично мислене.</p>
+                    </div>
                     <div class="number-of-playgrounds">
                         <div>
                             <div id="numberOfPlaygrounds">3 928</div>
