--- a/frontend/html/homepage.html
+++ b/frontend/html/homepage.html
@@ -22,7 +22,7 @@
                 <div> Карта </div>
             </div>
             <div class="about-us-wrapper">
-                <div> За прокета</div>
+                <div> За проекта</div>
             </div>
             <div class="logout-wrapper">
                 <div>
@@ -59,15 +59,17 @@
                     <div id="map"></div>
                     <button onclick="showCurrentLocation()" class="add-playground-btn">Покажи моята локация</button>
                 </div>
-                <div class="map-page-text">
-                    <div id="map-text">
-                        <h2 class="map-title">Играта е <br> най-добрият <br> метод за учене!</h2>
-                        <p class="map-page-main-text">Детските площадки са места, <br>
-                                                    където децата развиват важни<br>
-                                                    физически и социални умения, <br> 
-                                                    необходими за придобиване на <br>
-                                                    самочувствие, координация и <br>
-                                                    развитие на критично мислене.</p>
+                <div class="text-with-counter">
+                    <div id="igrata">
+                        <div id="igrata-inner">
+                            <h2 class="map-title">Играта е <br> най-добрият <br> метод за учене!</h2>
+                            <p class="map-page-main-text">Детските площадки са места, <br>
+                                                        където децата развиват важни<br>
+                                                        физически и социални умения, <br> 
+                                                        необходими за придобиване на <br>
+                                                        самочувствие, координация и <br>
+                                                        развитие на критично мислене.</p>
+                        </div>
                     </div>
                     <div class="number-of-playgrounds">
                         <div>
