--- a/frontend/html/playgroundForm.html
+++ b/frontend/html/playgroundForm.html
@@ -21,7 +21,7 @@
             <div> Карта </div>
         </div>
         <div class="about-us-wrapper">
-            <div> За прокета</div>
+            <div> За проекта</div>
         </div>
         <div class="logout-wrapper">
             <div>
@@ -41,7 +41,7 @@
                 <div class="question">
                     <label class="form-label" for="name-question">1. Име:</label>
                     <br>
-                    <input id="playground-name" type="text" class="project-input project-input-text" placeholder="Име на площадката, ако има такова." name="name">
+                    <input id="playground-name" type="text" class="text-input" placeholder="Име на площадката, ако има такова." name="name">
                 </div>
 
                 <div class="question" id="age-group-question">
@@ -65,26 +65,68 @@
                 </div>
 
                 <div class="question" id="location-question">
-                    <label class="form-label" for="second-question">3. Какво е местоположението на детската площадка?</label>
+                    <label class="form-label" for="third-question">3. Какво е местоположението на детската площадка?</label>
                     <br>
-                    <input type="radio" class="project-input project-input-radio" id="boulevard" name="location" value="завършен">
+                    <input type="radio" class="project-input project-input-radio" id="boulevard" name="location" value="До голям булевард">
                     <label for="boulevard">До голям булевард</label>
                     <br>
-                    <input type="radio" class="project-input project-input-radio" id="park" name="location" value="завършен">
+                    <input type="radio" class="project-input project-input-radio" id="park" name="location" value="В парк или градинка">
                     <label for="park">В парк или градинка</label>
                     <br>
-                    <input type="radio" class="project-input project-input-radio" id="apartments" name="location" value="завършен">
+                    <input type="radio" class="project-input project-input-radio" id="apartments" name="location" value="В междублоково пространство">
                     <label for="apartments">В междублоково пространство</label>
                     <br>
-                    <input type="radio" class="project-input project-input-radio" id="other-place" name="location" value="завършен">
+                    <input type="radio" class="project-input project-input-radio" id="other-place" name="location" value="Друго">
                     <label for="other-place">Друго</label>
                     <br>
                 </div>
 
+                <div class="question" id="shade-question">
+                    <label class="form-label" for="second-question">4. Има ли сенчести зони?</label>
+                    <br>
+                    <input type="radio" class="project-input project-input-radio" id="tree-shade" name="location" value="естествена">
+                    <label for="tree-shade">Да, естествена сянка от дървета</label>
+                    <br>
+                    <input type="radio" class="project-input project-input-radio" id="fake-shade" name="location" value="изкуствена">
+                    <label for="fake-shade">Да, изкуствена сянка от съоръжение</label>
+                    <br>
+                    <input type="radio" class="project-input project-input-radio" id="no-shade" name="location" value="няма">
+                    <label for="no-shade">Не, няма сянка</label>
+                    <br>
+                </div>
+
+                <div class="question" id="transport-question">
+                    <label class="form-label" for="second-question">5. Какъв е транспортният достъп?</label>
+                    <br>
+                    <input type="checkbox" class="project-input" id="free-parking" name="location" value="Свободно паркиране">
+                    <label for="free-parking">Свободно паркиране</label>
+                    <br>
+                    <input type="checkbox" class="project-input" id="fake-shade" name="location" value="Платено паркиране">
+                    <label for="paid-parking">Платено паркиране</label>
+                    <br>
+                    <input type="checkbox" class="project-input" id="no-shade" name="location" value="Велоалея">
+                    <label for="cycle">Велоалея</label>
+                    <br>
+                    <input type="checkbox" class="project-input" id="no-shade" name="location" value="Само пешеходен">
+                    <label for="pedestrian">Само пешеходен</label>
+                    <br>
+                </div>
+
+                <div class="question" id="shade-question">
+                    <label class="form-label" for="second-question">6. Има ли ограда</label>
+                    <br>
+                    <input type="radio" class="project-input" id="yes" name="location" value="Да">
+                    <label for="no">Да</label>
+                    <br>
+                    <input type="radio" class="project-input" id="fake-shade" name="location" value="Не">
+                    <label for="no">Не</label>
+                    <br>
+                </div>
+
                 <div class="question" id="description-question">
-                <label class="form-label" for="description">4. Допълнително описание:</label>
+                <label class="form-label" for="description">9. Допълнително описание:</label>
                 <br>
-                <textarea type="text" class="project-input project-input-text" name="description" rows="10" cols="20"></textarea>
+                <textarea type="text" class="text-input" name="description" rows="10" cols="20"></textarea>
                 </div>
 
 
