added google script to playgroundForm

--- a/frontend/html/playgroundForm.html
+++ b/frontend/html/playgroundForm.html
@@ -145,5 +145,8 @@
         </div>
     </div>
 </body>
+<script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbVV04b50sVLWUYtMDVfEIuPnoFPU_mas&region=BG&language=bg&callback=initMap">
+    </script>
 <script src="../js/map.js"></script>
 <script src="../js/playgroundForm.js"></script>
