menu anchors, delete old files

--- a/frontend/html/homepage.html
+++ b/frontend/html/homepage.html
@@ -19,7 +19,7 @@
                 <div> Начало </div>
             </div>
             <div class="map-wrapper">
-                <div> Карта </div>
+                <div> <a href="#map"> Карта </a> </div>
             </div>
             <div class="about-us-wrapper">
                 <div> За проекта</div>
@@ -29,7 +29,7 @@
                     <!-- when it says "Вход" -> <i class="fa-solid fa-user"></i> ? -->
                     <!-- <i class="fa-solid fa-arrow-right-from-bracket"></i> Изход -->
                     <!-- <button id="logout-btn" onclick="logout()">Вход</button> -->
-                    Вход
+                    <a href="register.html"> Вход </a>
                 </div>
             </div>
             <img class="site-logo" src="../../resources/logo  site.png" alt="site logo">
