add columns what why how

--- a/frontend/html/homepage.html
+++ b/frontend/html/homepage.html
@@ -79,6 +79,53 @@
                     </div>
                 </div>
             </div>
+
+            <!-- what? why? how? -->
+            
+            <div class="columns-3">
+                <div class="bg-green"> Какво? 
+                    KIDSground е инициатива 
+                    за създаване на дигитална 
+                    карта на всички известни 
+                    и неизвестни детски 
+                    площадки в град Пловдив, 
+                    като по този начин 
+                    стимулира изграждането 
+                    на единна онлайн 
+                    платформа с вида, 
+                    местоположението и състоянието 
+                    на детските площадки в
+                    града.
+                </div>
+                <div class="bg-red"> Защо?
+                    Липсва единна карта на 
+                    града, която да отразява
+                    всички детски площадки, 
+                    тяхното състояние, 
+                    налични съоръжения и 
+                    проблеми свързани с тях. 
+                    Дигиталното картиране 
+                    на детските площадки ще 
+                    даде ясна представа за 
+                    районите в града, където 
+                    такива липсват или са 
+                    крайно недостатъчни.
+                </div>
+                <div class="bg-yellow">Как?
+                    Отвори картата, 
+                    отбележи площадка и 
+                    отговори на краткия 
+                    въпросник. Така би 
+                    допринесъл за изграждане 
+                    на подробна и полезна 
+                    информационна 
+                    платформа в реално време
+                    за детските площадки в 
+                    града, благодарение на 
+                    колективната дейност и 
+                    мобилизация.
+                </div>
+            </div>
         </main>
         </div>
 </body>
