--- a/frontend/html/homepage.html
+++ b/frontend/html/homepage.html
@@ -81,8 +81,61 @@
             </div>
 
             <!-- what? why? how? -->
-            
-            <div class="columns-3">
+            <div class="container">
+                <div class="outer">
+                  <div class="inner">
+                    <p>Какво?</p>
+                  </div>
+                  <p> 
+                    KIDSground е инициатива 
+                    за създаване на дигитална 
+                    карта на всички известни 
+                    и неизвестни детски 
+                    площадки в град Пловдив, 
+                    като по този начин 
+                    стимулира изграждането 
+                    на единна онлайн 
+                    платформа с вида, 
+                    местоположението и състоянието 
+                    на детските площадки в
+                    града.</p>
+                </div>
+                <div class="outer">
+                  <div class="inner">
+                    <p>Защо?</p>
+                  </div>
+                  <p>Липсва единна карта на 
+                    града, която да отразява
+                    всички детски площадки, 
+                    тяхното състояние, 
+                    налични съоръжения и 
+                    проблеми свързани с тях. 
+                    Дигиталното картиране 
+                    на детските площадки ще 
+                    даде ясна представа за 
+                    районите в града, където 
+                    такива липсват или са 
+                    крайно недостатъчни.</p>
+                </div>
+                <div class="outer">
+                  <div class="inner">
+                    <p>Как?</p>
+                  </div>
+                  <p>Отвори картата, 
+                    отбележи площадка и 
+                    отговори на краткия 
+                    въпросник. Така би 
+                    допринесъл за изграждане 
+                    на подробна и полезна 
+                    информационна 
+                    платформа в реално време
+                    за детските площадки в 
+                    града, благодарение на 
+                    колективната дейност и 
+                    мобилизация.</p>
+                </div>
+              </div>
+            <!-- <div class="columns-3">
                 <div class="bg-green"> Какво? 
                     KIDSground е инициатива 
                     за създаване на дигитална 
@@ -96,8 +149,8 @@
                     местоположението и състоянието 
                     на детските площадки в
                     града.
-                </div>
-                <div class="bg-red"> Защо?
+                </div> -->
+                <!-- <div class="bg-red"> Защо?
                     Липсва единна карта на 
                     града, която да отразява
                     всички детски площадки, 
@@ -109,9 +162,9 @@
                     даде ясна представа за 
                     районите в града, където 
                     такива липсват или са 
-                    крайно недостатъчни.
-                </div>
-                <div class="bg-yellow">Как?
+                    крайно недостатъчни. 
+                 </div>-->
+                <!--<div class="bg-yellow">Как?
                     Отвори картата, 
                     отбележи площадка и 
                     отговори на краткия 
@@ -124,7 +177,7 @@
                     града, благодарение на 
                     колективната дейност и 
                     мобилизация.
-                </div>
+                </div> -->
             </div>
         </main>
         </div>
