columns fixed, still need resizing

--- a/frontend/html/homepage.html
+++ b/frontend/html/homepage.html
@@ -82,11 +82,11 @@
 
             <!-- what? why? how? -->
             <div class="container">
-                <div class="outer">
-                  <div class="inner">
+                <div class="left-outer-column">
+                  <div class="left-inner-column">
                     <p>Какво?</p>
                   </div>
-                  <p> 
+                  <p class="outer-text"> 
                     KIDSground е инициатива 
                     за създаване на дигитална 
                     карта на всички известни 
@@ -100,11 +100,12 @@
                     на детските площадки в
                     града.</p>
                 </div>
-                <div class="outer">
-                  <div class="inner">
+                <div class="middle-outer-column">
+                  <div class="middle-inner-column">
                     <p>Защо?</p>
                   </div>
-                  <p>Липсва единна карта на 
+                  <p class="outer-text">
+                    Липсва единна карта на 
                     града, която да отразява
                     всички детски площадки, 
                     тяхното състояние, 
@@ -117,11 +118,12 @@
                     такива липсват или са 
                     крайно недостатъчни.</p>
                 </div>
-                <div class="outer">
-                  <div class="inner">
+                <div class="right-outer-column">
+                  <div class="right-inner-column">
                     <p>Как?</p>
                   </div>
-                  <p>Отвори картата, 
+                  <p class="outer-text">
+                    Отвори картата, 
                     отбележи площадка и 
                     отговори на краткия 
                     въпросник. Така би 
