--- a/frontend/html/homepage.html
+++ b/frontend/html/homepage.html
@@ -16,7 +16,7 @@
     <div class="main-content">
         <header>
             <div class="home-wrapper">                
-                <div> Начало </div>
+                <div> <a href="homepage.html"> Начало </a> </div>
             </div>
             <div class="map-wrapper">
                 <div> <a href="#map"> Карта </a> </div>
@@ -86,7 +86,7 @@
                   <div class="left-inner-column">
                     <p>Какво?</p>
                   </div>
-                  <p class="outer-text"> 
+                  <p class="text"> 
                     KIDSground е инициатива 
                     за създаване на дигитална 
                     карта на всички известни 
@@ -104,7 +104,7 @@
                   <div class="middle-inner-column">
                     <p>Защо?</p>
                   </div>
-                  <p class="outer-text">
+                  <p class="text"> 
                     Липсва единна карта на 
                     града, която да отразява
                     всички детски площадки, 
@@ -122,7 +122,7 @@
                   <div class="right-inner-column">
                     <p>Как?</p>
                   </div>
-                  <p class="outer-text">
+                  <p class="text"> 
                     Отвори картата, 
                     отбележи площадка и 
                     отговори на краткия 
@@ -188,8 +188,6 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbVV04b50sVLWUYtMDVfEIuPnoFPU_mas&region=BG&language=bg&callback=initMap">
     </script>
 <script src="../js/homepage.js" defer></script>
-<script src="../js/project.js" defer></script>
-<script src="../js/TableCsvExporter.js" defer></script>
 <script src="../js/map.js"></script>
 
 </html>
