--- a/frontend/html/playgroundForm.html
+++ b/frontend/html/playgroundForm.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="home-wrapper">                
-            <div> Начало </div>
+            <div> <a href="homepage.html"> Начало </a> </div>
         </div>
         <div class="map-wrapper">
             <div> Карта </div>
@@ -32,7 +32,7 @@
                 Вход
             </div>
         </div>
-        <img class="site-logo" src="../../resources/logo  site.png" alt="site logo">
+        <div class="site-logo"><a href="homepage.html"><img class="site-logo" src="../../resources/logo  site.png" alt="site logo"> </a></div>
     </header>
     <div id="add-playground">
         <h2>Добави площадка</h2>
