small css changes

--- a/frontend/html/homepage.html
+++ b/frontend/html/homepage.html
@@ -58,7 +58,7 @@
                     <div id="map"></div>
                     <span>
                     <button onclick="showCurrentLocation()" class="add-playground-btn">Покажи моята локация</button>
-                    <button onclick="openPlaygroundForm()" class="add-playground-btn"> <i class="fa-regular fa-square-plus"></i> ДОБАВЕТЕ ДЕТСКА ПЛОЩАДКА</button>
+                    <button onclick="openPlaygroundForm()" class="add-playground-btn"> <i class="fa-regular fa-square-plus"></i>Добави площадка</button>
                 </span>
                 </div>
                 <div class="text-with-counter">
@@ -82,7 +82,6 @@
                 </div>
             </div>
 
-            <!-- what? why? how? -->
             <div id="about-us" class="container">
                 <div class="left-outer-column">
                   <div class="left-inner-column">
@@ -139,49 +138,6 @@
                     мобилизация.</p>
                 </div>
               </div>
-            <!-- <div class="columns-3">
-                <div class="bg-green"> Какво? 
-                    KIDSground е инициатива 
-                    за създаване на дигитална 
-                    карта на всички известни 
-                    и неизвестни детски 
-                    площадки в град Пловдив, 
-                    като по този начин 
-                    стимулира изграждането 
-                    на единна онлайн 
-                    платформа с вида, 
-                    местоположението и състоянието 
-                    на детските площадки в
-                    града.
-                </div> -->
-                <!-- <div class="bg-red"> Защо?
-                    Липсва единна карта на 
-                    града, която да отразява
-                    всички детски площадки, 
-                    тяхното състояние, 
-                    налични съоръжения и 
-                    проблеми свързани с тях. 
-                    Дигиталното картиране 
-                    на детските площадки ще 
-                    даде ясна представа за 
-                    районите в града, където 
-                    такива липсват или са 
-                    крайно недостатъчни. 
-                 </div>-->
-                <!--<div class="bg-yellow">Как?
-                    Отвори картата, 
-                    отбележи площадка и 
-                    отговори на краткия 
-                    въпросник. Така би 
-                    допринесъл за изграждане 
-                    на подробна и полезна 
-                    информационна 
-                    платформа в реално време
-                    за детските площадки в 
-                    града, благодарение на 
-                    колективната дейност и 
-                    мобилизация.
-                </div> -->
             </div>
         </main>
         </div>
